=== master

* Make Database#tables return partitioned tables on PostgreSQL 10+ (epoberezhny) (#1729, #1730)

=== 5.38.0 (2020-11-01)

* Do not add new Database instances to Sequel::DATABASES if the test connection fails (jeremyevans) (#1727)

* Support the newer com.mysql.cj.jdbc.Driver in the jdbc/mysql adapter (jeremyevans)

* Do not swallow disconnect errors in Database#create_or_replace_view or Database#create_table* on Oracle (jeremyevans)

* Only rescue non-disconnect Sequel::DatabaseErrors in Postgres::Database#server_version (jeremyevans) (#1724)

* Make the single_table_inheritance and prepared_statements plugins work if loaded into the same class (jeremyevans) (#1721)

=== 5.37.0 (2020-10-01)

* Recognize more unsigned decimal/float types in the schema dumper (akimd, jeremyevans) (#1720)

* Add Postgres::PGRow::{Array,Hash}Row#op to the pg_row_ops extension if the pg_row extension is loaded (jeremyevans)

* Add Model#column_previously_was and #column_previously_changed? to the dirty plugin (jeremyevans)

* Raise Migrator::Error if attempting to migrate down to a version where there are necessary migration files missing (jeremyevans) (#1716)

=== 5.36.0 (2020-09-01)

* Handle passing keyword arguments through class methods defined via Plugins.def_dataset_method on Ruby 2.7+ (jeremyevans)

* Handle passing keyword arguments through when loading plugins on Ruby 2.7+ (jeremyevans)

* Handle passing keyword arguments through migrations when defining custom Database methods that accept keywords on Ruby 2.7+ (jeremyevans)

* Handle passing keyword arguments through Dataset#query when using the query extension on Ruby 2.7+ (jeremyevans)

* Handle passing keyword arguments through the association proxy when using the association_proxies plugin on Ruby 2.7+ (jeremyevans)

* Handle passing keyword arguments through the class method to a method defined in dataset_module on Ruby 2.7+ (adam12) (#1713)
