@@ -1,5 +1,7 @@
 === master
 
+* Make the roots_dataset method in the tree plugin work with queries using joins (jeremyevans) (#1731)
+
 * Make Database#tables return partitioned tables on PostgreSQL 10+ (epoberezhny) (#1729, #1730)
 
 === 5.38.0 (2020-11-01)
